gitops/flux/apps/logging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cattle-logging-system
  labels:
    name: cattle-logging-system
    app.kubernetes.io/name: logging
    app.kubernetes.io/part-of: rancher
